# notes

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.in
.github/workflows/: build.yml  pages.yml  publish.yml
Astrophysics/: _config.yml  _toc.yml  index.md
Astrophysics/AstroLab/: Lecture1.md  Lecture2.md  Presentation.md  Stan.md
Astrophysics/Astrobiology/: index.md
Astrophysics/Cosmology/: Cosmological_Redshift.md  Expanding_Universe.md  Gravitational_Lensing.md  index.md
Astrophysics/Observation/: Nickel_Guide.md  index.md
Astrophysics/Orbital_Mechanics/: Keplers_Law.md  Specific_Mechanical_Energy.md  index.md
Astrophysics/Planetary_Science/: Planet_Formation.md  Planetary_Rings.md  index.md
Astrophysics/Supernovae/: index.md
Computer_Science/: _config.yml  _toc.yml  index.md
Computer_Science/Computer_Architecture/: CS61C_Review.md  Floating_Point.md  index.md
Computer_Science/Database_Systems/: SUMMARY.md  index.md
Computer_Science/JavaScript/: Datatypes.md  Objects.md  Operators.md  index.md
Data_Science/: CS189_Final_Review.md  CS189_Review.md  Design_and_Bias.md  Naive_Bayes.md  Pandas.md  _config.yml  _toc.yml
Data_Science/DS100_Lecture_Notes/: Data-Science-MT1-Study-Guide.md  Lecture-Notes-10.md  (+17 more)
Finance/: _toc.yml
Mathematics/: _config.yml  _toc.yml
Others/: Folder-Structure.md  Prospective-Timeline.md  Studying.md  _toc.yml  index.md
Physics/: _config.yml  _toc.yml  index.md
_site/: index.html
dataviz/: circular_colormap.ipynb
mynotebook/: _config.yml  _toc.yml
scripts/: add_index.py
(+2352 files in other folders)
