[tool.poetry]
name = "mynotebook"
version = "0.0.0"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^0.13"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
